tests/expected_package_import_duplicate.diag.out
<input>:2:1: error: duplicate import 'pkg_import_dupe_support'
    import pkg_import_dupe_support;
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
